syntax = "proto3";

option go_package = "github.com/AntonLuning/tiny-url/proto";

service Service {
    rpc CreateShortenURL(ShortenURLRequest) returns (ShortenURLResponse);
    rpc GetOriginalURL(OriginalURLRequest) returns (OriginalURLResponse);
}

message ShortenURLRequest {
    string original = 1;
}

message ShortenURLResponse {
    string original = 1;
    string shorten = 2;
}

message OriginalURLRequest {
    string shorten = 1;
}

message OriginalURLResponse {
    string shorten = 1;
    string original = 2;
}
